--- a/Spielwiese/WebContent/resources/css/style.css
+++ b/Spielwiese/WebContent/resources/css/style.css
@@ -1,71 +1,36 @@
-.ui-datatable-tablewrapper {
-	margin:0px;padding:0px;
-	width:100%;
-	box-shadow: 10px 10px 5px #888888;
-	border:1px solid #000000;
-	
-	-moz-border-radius-bottomleft:0px;
-	-webkit-border-bottom-left-radius:0px;
-	border-bottom-left-radius:0px;
-	
-	-moz-border-radius-bottomright:0px;
-	-webkit-border-bottom-right-radius:0px;
-	border-bottom-right-radius:0px;
-	
-	-moz-border-radius-topright:0px;
-	-webkit-border-top-right-radius:0px;
-	border-top-right-radius:0px;
-	
-	-moz-border-radius-topleft:0px;
-	-webkit-border-top-left-radius:0px;
-	border-top-left-radius:0px;
-}.ui-datatable-tablewrapper table{
-    border-collapse: collapse;
-        border-spacing: 0;
-	width:100%;
-	height:100%;
-	margin:0px;padding:0px;
-}.ui-datatable-tablewrapper tr:last-child td:last-child {
-	-moz-border-radius-bottomright:0px;
-	-webkit-border-bottom-right-radius:0px;
-	border-bottom-right-radius:0px;
-}.ui-datatable-tablewrapper tr:last-child td:first-child{
-	-moz-border-radius-bottomleft:0px;
-	-webkit-border-bottom-left-radius:0px;
-	border-bottom-left-radius:0px;
-}.ui-datatable-tablewrapper tr:hover td{
-	
-}.ui-datatable-tablewrapper table td, .ui-datatable-tablewrapper table th {
-	padding: 3px 10px; 
-}.ui-datatable-tablewrapper table thead th {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #006699), color-stop(1, #00557F) );
-	background:-moz-linear-gradient( center top, #006699 5%, #00557F 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#006699', endColorstr='#00557F');
-	background-color:#006699; 
-	color:#FFFFFF; 
-	font-size: 15px; 
-	font-weight: bold; 
-	border-left: 1px solid #000000; 
-}.ui-datatable-tablewrapper table thead th:first-child { 
-	border: none; 
-}.ui-datatable-tablewrapper tr:nth-child(odd){ 
-	background-color:#aad4ff; 
-}.ui-datatable-tablewrapper tr:nth-child(even)    { 
-	background-color:#ffffff; 
-}.ui-datatable-tablewrapper td{
-	vertical-align:middle;
-	border:1px solid #000000;
-	border-width:0px 1px 1px 0px;
-	text-align:left;
-	padding:7px;
-	font-size:10px;
-	font-family:Arial;
-	font-weight:normal;
-	color:#000000;
-}.ui-datatable-tablewrapper tr:last-child td{
-	border-width:0px 1px 0px 0px;
-}.ui-datatable-tablewrapper tr td:last-child{
-	border-width:0px 0px 1px 0px;
-}.ui-datatable-tablewrapper tr:last-child td:last-child{
-	border-width:0px 0px 0px 0px;
-}
+  /* Allgemein */
+   body {
+      background-color: #555; 
+      color: #fff;
+      font: small/1.3 Arial, Helvetica, sans-serif; }
+   h1 {
+      font-size: 1.5em;
+      padding: 1em 8px;
+      color: #333;
+      background-color: #069;
+      margin: 0; }
+   /* Ende Allgemein */
+
+   /* Navigation */
+   #nav {
+      width: 100%;
+      float: left;
+      margin: 0 0 2em 0;
+      padding: 0;
+      list-style: none;
+      background-color: #f2f2f2;
+      border-bottom: 1px solid #ccc; 
+      border-top: 1px solid #ccc; }
+   #nav li {
+      float: left; }
+   #nav li a {
+      display: block;
+      padding: 8px 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #069;
+      border-right: 1px solid #ccc; }
+   #nav li a:hover {
+      color: #c00;
+      background-color: #fff; }
+   /* Ende Navigation */
