Darstellung funktioniert soweit. Müssen uns jetzt auf was konkretes einigen.

--- a/Spielwiese/WebContent/resources/css/style.css
+++ b/Spielwiese/WebContent/resources/css/style.css
@@ -1,36 +1,86 @@
-  /* Allgemein */
-   body {
-      background-color: #555; 
-      color: #fff;
-      font: small/1.3 Arial, Helvetica, sans-serif; }
-   h1 {
-      font-size: 1.5em;
-      padding: 1em 8px;
-      color: #333;
-      background-color: #069;
-      margin: 0; }
-   /* Ende Allgemein */
+/* Allgemein */
+body {
+	background-color: #555;
+	color: #fff;
+	font: small/1.3 Arial, Helvetica, sans-serif;
+}
 
-   /* Navigation */
-   #nav {
-      width: 100%;
-      float: left;
-      margin: 0 0 2em 0;
-      padding: 0;
-      list-style: none;
-      background-color: #f2f2f2;
-      border-bottom: 1px solid #ccc; 
-      border-top: 1px solid #ccc; }
-   #nav li {
-      float: left; }
-   #nav li a {
-      display: block;
-      padding: 8px 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #069;
-      border-right: 1px solid #ccc; }
-   #nav li a:hover {
-      color: #c00;
-      background-color: #fff; }
-   /* Ende Navigation */
+h1 {
+	font-size: 1.5em;
+	padding: 1em 8px;
+	color: #333;
+	background-color: #069;
+	margin: 0;
+}
+/* Ende Allgemein */
+
+/* Navigation */
+#nav {
+	width: 100%;
+	float: left;
+	margin: 0 0 2em 0;
+	padding: 0;
+	list-style: none;
+	background-color: #f2f2f2;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+}
+
+#nav li {
+	float: left;
+}
+
+#nav li a {
+	display: block;
+	padding: 8px 15px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #069;
+	border-right: 1px solid #ccc;
+}
+
+#nav li a:hover {
+	color: #c00;
+	background-color: #fff;
+}
+/* Ende Navigation */
+
+/* Details - Die aufklappbaren Elemente */
+details {
+  border-radius: 3px;
+  color: #000;
+  background: #f2f2f2;
+  margin: 1em 0;
+}
+
+summary {
+  background: #333;
+  color: #FFF;
+  border-radius: 3px;
+  padding: 5px 10px;
+  outline: none;
+}
+
+#custom-marker summary {
+  font-size: 17px;
+  vertical-align: top;
+}
+
+#custom-marker summary::-webkit-details-marker {
+  display: none;
+}
+
+#custom-marker summary:before {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  content: "";
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+#custom-marker[open] summary:before {
+  background-position: -18px 0;
+}
+/* Ende Details */
