--- a/Spielwiese/WebContent/resources/css/style.css
+++ b/Spielwiese/WebContent/resources/css/style.css
@@ -61,6 +61,9 @@ summary {
   border-radius: 3px;
   padding: 5px 10px;
   outline: none;
+  	-webkit-box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);
+	box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);}
 }
 
 details a:link, a:visited, a:hover {
@@ -76,3 +79,34 @@ details img{
     width:auto;
 }
 /* Ende Details */
+
+/* Suche */
+input[type=text] {
+	width: 200px;
+	padding: 5px;
+	outline: none;
+	border: 2px solid #999999;
+	border-radius: 5px;
+	background-image: url('./search.png');
+	background-position: 180px 0px;
+	background-repeat: no-repeat;
+	-webkit-box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);
+	box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);}
+
+input[type=text]:focus {
+	background-color: #FFFFFF;
+	border-color: #333333;
+
+}
+
+input[type=submit]{
+	padding: 5px;
+	outline: none;
+	border: 2px solid #999999;
+	border-radius: 5px;
+	-webkit-box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);
+	box-shadow: 10px 9px 37px -2px rgba(0, 0, 0, 0.75);}
+}
+/* Ende Suche */
