--- a/Lucene-Clustering/.settings/org.eclipse.wst.common.component
+++ b/Lucene-Clustering/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,8 @@
     <wb-module deploy-name="Lucene-Clustering">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/" source-path="/articles.lucene"/>
+        <wb-resource deploy-path="/" source-path="/clusters.lucene"/>
         <property name="context-root" value="Lucene-Clustering"/>
         <property name="java-output-path" value="/Lucene-Clustering/bin"/>
     </wb-module>
